--- a/demo.html
+++ b/demo.html
@@ -1,21 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>
-        Triangulation of 2D Points
-    </title>
-    <style>
-      body {
-        margin: 0;
-        text-align: center;
-        font-family: sans-serif;
-      }
-      canvas {
-        border: 2px solid lightgrey;
-        border-radius: 10px;
-        position: relative;
-      }
-    </style>
+    <title>Triangulation of 2D Points</title>
+    <link rel="stylesheet" href="demo.css">
   </head>
   <body>
     <h2>Triangulation of 2D Points Demo</h2>
